# user-service

./: .env  .env-non-dev  .pre-commit-config.yaml  Dockerfile  alembic.ini  docker-compose.yaml  entrypoint.sh  pyproject.toml  pytest.ini  requirements.txt
app/application/exceptions/: access.py  base.py  user.py
app/application/interactors/: auth_interactors.py  outbox_interactor.py  user_interactors.py
app/application/interfaces/: email_provider_interface.py  email_sender_interface.py  jwt_processor_interface.py  link_creator_interface.py  outbox_interface.py  password_hasher_interface.py  uow_interface.py  user_interface.py
app/domain/entities/: action_entity.py  message_entity.py  user_entity.py
app/infrastructure/: message_relay.py
app/infrastructure/adapters/: email_provider.py  email_sender.py  jwt_processor.py  link_creator.py  outbox_gateway.py  password_hasher.py  uow.py  user_gateway.py
app/infrastructure/auth/: authentication.py
app/infrastructure/data_access/: database.py
app/infrastructure/data_access/alembic/: env.py
app/infrastructure/data_access/models/: __init__.py  message_model.py  user_model.py
app/main/: config.py  run.py
app/main/ioc/providers/: auth.py  outbox.py  root.py  user.py
src/app/: config.py  ioc.py  main.py
src/app/application/dtos/: user_dtos.py
src/app/application/interactors/: auth_interactors.py  user_interactors.py
src/app/application/interfaces/: db_interfaces.py  email_sender_interface.py  jwt_interface.py  jwt_processor_interface.py  password_hasher_interface.py  user_interface.py  user_interfaces.py  uuid_generator_interfaces.py
src/app/controllers/user_controllers/: user_api.py  user_schemas.py
src/app/domain/entities/: user_entity.py
src/app/domain/exceptions/: user.py
src/app/infrastructure/: broker.py  database.py
src/app/infrastructure/adapters/: email_sender_impl.py  jwt_processor_impl.py  password_hasher_impl.py  user_gateway.py  utils.py
src/app/infrastructure/auth/: authentication.py
src/app/main/: config.py  main.py  run.py
src/domain/common/: entity.py  exceptions.py  value_objects.py
src/domain/user/: entity.py  enums.py  value_objects.py
tests/: config.py  conftest.py
tests/integration_tests/application/: conftest.py  test_auth_interactors.py  test_user_interactors.py
tests/unit_tests/application/: test_jwt_processor_impl.py
tests/unit_tests/infrastructure/: test_jwt_processor_impl.py  test_password_hasher_impl.py
(+36 files in other folders)
