[tool.poetry]
name = "user-service"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.115.6"}
sqlalchemy = "^2.0.36"
asyncpg = "^0.30.0"
alembic = "^1.14.0"
dishka = "^1.4.2"
faststream = {version = "0.5.11", extras = ["rabbit"]}
pydantic = "2.7.0"
passlib = "^1.7.4"
bcrypt = "^4.2.1"
python-jose = "^3.3.0"
httpx = "^0.28.1"
pytest-asyncio = "^0.25.0"
pytest = "^8.3.4"
pre-commit = "^4.0.1"
flake8 = "^7.1.1"
black = "^24.10.0"
isort = "^5.13.2"
mypy = "^1.13.0"
autoflake = "^2.3.1"
pyright = "^1.1.391"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 88
target-version = ['py312']


[tool.isort]
profile = "black"

[tool.pyright]
include = ["src"]